@@ -18,6 +18,9 @@ Release 2.4.0 - ???
 
    * Add a fetcher and emitter for Azure blob storage (TIKA-3707).
 
+   * tika-server now clones forking process' environment variables
+     into forked process (TIKA-3715).
+
    * Add an optional /eval endpoint for tika-eval profile or compare
      capabilities in tika-server (TIKA-3689).
 
